# FuckLongyuan

./: .gitignore
app/: build.gradle
app/src/androidTest/java/com/example/fucklongyuan/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Readme.md  android-anti-debug.cpp  android-anti-debug.h  binsearch.cpp  client.cpp  inject.cpp  inject.h  inject_main.cpp  libhook.cpp  libhook.h  linker.h  log.h  main.cpp  mg.pb.cc  mg.pb.h  msg.pb.cc  msg.pb.h  person.pb.cc  person.pb.h  person.proto  person_test.cpp  strings.cpp  student.pb.cc  student.pb.h  student.proto
app/src/main/cpp/libprotobuf/android/armeabi-v7a/lib/: libprotobuf-lite.la  libprotobuf.la  libprotoc.la
app/src/main/cpp/libprotobuf/android/armeabi-v7a/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
app/src/main/cpp/protobuf-2.4.1/: Makefile.in  aclocal.m4  autogen.sh  build_script_32.sh  configure
app/src/main/cpp/protobuf-2.4.1/gtest/: Makefile.in  aclocal.m4  configure
app/src/main/cpp/protobuf-2.4.1/gtest/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
app/src/main/cpp/protobuf-2.4.1/gtest/build-aux/: config.h.in
app/src/main/cpp/protobuf-2.4.1/src/: Makefile.in
app/src/main/cpp/protobuf-2.4.1/src/google/protobuf/: message.cc
app/src/main/java/com/example/fucklongyuan/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/fucklongyuan/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
